<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Iglesia Nueva Vida</string>
    <string name="linkdescargaApp">https://diegomata90.github.io/</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!-- Menu Administrador-->
    <string name="inicio_admin">Inicio Administrador</string>
    <string name="perfil">Perfil Administrador</string>
    <string name="registrar">Registrar</string>
    <string name="lista_admin">Lista de administradores</string>
    <string name="salir">Cerrar Sesion</string>

    <!-- Menu Cliente-->
    <string name="opcionesTXT">Opciones</string>
    <string name="masOpcionesTXT">Más Opciones</string>
    <string name="inicio_cliente">Inicio Cliente</string>
    <string name="acercade">Acerca de</string>
    <string name="compartir">Compartir</string>
    <string name="administrador">Administrador</string>

    <!-- Registro Administrador -->
    <string name="registroAdministrador">Registro de Administrador</string>
    <string name="correo">Correo Electrónico</string>
    <string name="nombre">Nombre Completo</string>
    <string name="apellidos">Apellidos</string>
    <string name="password">Contraseña</string>
    <string name="fechaRegistro">Fecha de Registro</string>
    <string name="btnregistrar">Registrar</string>
    <string name="SoloadminTXT">Solo Administradores</string>
    <string name="btnAcceder">Acceder</string>
    <string name="btnRestaurar">Restaurar Contraseña</string>


    <!-- Perfil Administrador-->
    <string name="nombreAdminTXT">Nombre: </string>
    <string name="apellidosAdminTXT">Apellidos: </string>
    <string name="correoAdminTXT">Correo: </string>
    <string name="fechaAdminTXT">Fecha: </string>
    <string name="CambioPass">Cambio Contraseña</string>

    <!-- Inicio Session-->
    <string name="loginTXT">Inicio como Administrador</string>

    <!-- Inicio Cliente-->
    <string name="CategoriasTXT">Categorías</string>
    <string name="OtrasCategoriasTXT">Otras Categorías</string>
    <string name="Evento">Evento</string>
    <string name="Biblia">Biblia</string>
    <string name="Audio">Audio</string>
    <string name="Video">Video</string>
    <string name="VersiculoTXT">Versículo del día</string>
    <string name="libro">Libro</string>
    <string name="capitulo">1:1</string>
    <string name="BienvenidoTXT">Bienvenido(a): </string>
    <string name="NombreTXT"> -- </string>

    <string name="SinConexionTxt">No hay conexión a Internet</string>


    <!-- Informacion de Iglesia-->
    <string name="PastorTXT">Pastor: Samuel Morera</string>
    <string name="DireccionTXT">Dirección: San Gabriel, Aserrí, CR</string>

    <!-- Agregar Eventos-->
    <string name="EventoTXT">Agregar Evento</string>
    <string name="TituloEvento">Título</string>
    <string name="DescripcionEvento">Descripción</string>
    <string name="LugarEvento">Lugar</string>
    <string name="FechaEvento">Fecha del evento</string>
    <string name="HoraEvento">Hora del evento</string>
    <string name="checkboxEnviarNotificacion">Enviar notificación</string>
    <string name="PublicarEvento">Publicar</string>

    <!-- Agregar Eventos A-->
    <string name="EventoA">Evento Administrador</string>

    <!-- Agregar y detalle Audio-->
    <string name="AudioTXT">Agregar Audio</string>
    <string name="AudioListaTXT">Lista de Audios</string>
    <string name="TituloAudio">Título</string>
    <string name="DescripcionAudio">Descripción</string>
    <string name="FechaAudio">Fecha del audio</string>
    <string name="PlayAudio">Play</string>
    <string name="PublicarAudio">Publicar</string>


    <!-- ACERCA DE APLICACION-->
    <string name="desarrollador">Desarrollado por : Diego Mata M.</string>
    <string name="AcercaDeApp">Acerca De </string>
    <string name="InfoCorreo">Correo : DevDiegomata90@gmail.com</string>
    <string name="InfoVersion">Versión: 1.0</string>
    <string name="InfoRedes">Redes Sociales</string>
    <string name="InfoContact">Contactame en:</string>
    <string name="Ir_website">Página Web</string>
    <string name="Ir_linkedin">LinkedIn</string>
    <string name="Ir_telegram">Telegram</string>
    <string name="Ir_youtube">YouTube</string>
    <string name="Ir_Github">GitHub</string>
    <string name="Ir_correo">Correo</string>


    <!-- BIBLIA-->
    <string name="LibroTXT">Libro</string>
    <string name="CapituloTXT">Capítulo</string>
    <string name="VersiculoTXT2">Versiculo</string>
    <string name="TestamentoTXT">Testamento</string>
    <string name="EligeBook">Libro</string>
    <string name="EligeChapterTXT">Capítulo</string>
    <string name="itemTXT">item dropdown</string>
    <string name="btnMostrar">B</string>
    <string name="versiculoTXT">Versiculo</string>
    <string name="nversiculo">1</string>
    <string name="versiculo">En el principio creó Dios los cielos y la tierra</string>


    <!-- Notifiaciones -->
    <string name="NoficacionTXT">Notificación</string>
    <string name="TituloNotificacion">Título Notificación</string>
    <string name="MensajeNotificacion">Mensaje Notificación</string>
    <string name="BotonNotificacion"> Enviar Notificación</string>
    <string name="SendNotification">NOTIFICACIONES</string>

    <string name="notification_channel_group_general">General</string>
    <string name="default_notification_channel_id">ID</string>

    <!-- Otras Categorias -->
    <string name="CategoriasDetalleTitulo">Item Categorías Detalle</string>
    <string name="AutorCategoriaDetalle">Autor </string>
    <string name="DescripCategoriaDetalle">Descripcion </string>
    <string name="VistasOCategoria">--</string>
    <string name="tituloOCategoria">Titulo de Categoria</string>
    <string name="AutorOCategoria">Jesus</string>
    <string name="link">Ver Video : </string>
    <string name="ContenidoOCategorias">
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque sunt debitis officiis sint harum, numquam, aspernatur aliquam impedit porro voluptatibus ad suscipit? Veritatis nihil molestiae nisi voluptate labore fugiat deleniti!
    Vel soluta autem quas temporibus vero praesentium omnis rem deserunt? Veritatis, at. Accusantium officiis quam facere iure inventore ipsum necessitatibus, pariatur illum sed quo sequi tempora alias asperiores hic consectetur!
    Deserunt blanditiis nulla rem, iusto aut velit, officia dignissimos excepturi, eius ratione quae. Omnis debitis esse praesentium reprehenderit illum. Consequuntur doloribus laudantium ullam natus molestiae et non ut veritatis optio?
    </string>


    <!-- Cambio de PassWord -->
    <string name="MisCredencialesTXT">Mis Credenciales</string>
    <string name="PassActualET">  Contraseña Actual</string>
    <string name="PassNewET"> Nueva Contraseña</string>
    <string name="PassConfirmET"> Confirmar Contraseña</string>
    <string name="CAMBIARPASSBTN">CAMBIAR CONTRASEÑA</string>
    <string name="IRINICIOBTN">IR INICIO</string>
    <string name="NOTATXT">Nota: Si cambia la contraseña, se cerrará sesión automáticamente</string>

    <!-- Restablecer Password -->
    <string name="RestaurarTxt">Restablecer Contraseña</string>
    <string name="btnSentEmail">Enviar Correo</string>

    <!-- Lista Administrador -->
    <string name="nombre_Admin">Nombre ADMIN</string>
    <string name="apellidos_Admin">Apellidos ADMIN</string>
    <string name="correo_Admin">Correo ADMIN</string>
    <string name="buscar">Buscar...</string>

    <!-- Perfil Administrador -->
    <string name="perfilTxt">Mi Perfil</string>
    <string name="infoTxt">Mi Información</string>
    <string name="guiones"> --- </string>
    <string name="uidAdminTXT">UID: </string>
    <string name="btnEditar">Editar</string>

    <!-- Detalle Evento -->
    <string name="CompartirTxt">Compartir a los mientros de la Iglesia</string>
    <string name="ButonCompartir">Compartir</string>
    <string name="AddCalendar">Añadir al calendario</string>

    <!-- Video -->
    <string name="Videotitulo">Titulo del Video</string>
    <string name="VideoDescrip">Descripción del Video</string>
    <string name="LinkVideo">Link del Video</string>

    <!-- Lector de Pantalla -->
    <string name="contentDescBTNPlay">Boton para dar play al audio</string>
    <string name="contentDescBTNPause">Boton para dar pausa al audio</string>
    <string name="contentDescICOVolumen">Icono volumen</string>
    <string name="contentDescBARVolumen">Icono volumen</string>
    <string name="contentDescBTNCompartir">Boton para compartir</string>
    <string name="contentDescLOGON">Logo developer</string>
    <string name="contentDescBTNVerYOUTUBE">Boton para ver en youtube</string>
    <string name="contentDescTXVCorreo">Cuadro texto para ingresar el correo</string>
    <string name="contentDescTXVPass">Cuadro texto para ingresar la contraseña</string>
    <string name="contentDescBARAvance">Barra de progreso del audio</string>
    <string name="contentDescRVAudio">Listado de audios</string>

</resources>