<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.view.Evento.EventoDetalleActivity">

    <!--Container Principal -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Container Imagen -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/containerImage"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ImagenEvento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/image_ico" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Container Textos -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/containerTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TituloEvento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/TituloEvento"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/FechaEvento"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:text="@string/FechaEvento"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/HoraEvento"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/HoraEvento"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <TextView
                android:id="@+id/DescripcionEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/DescripcionEvento"
                android:textColor="#454444"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/LugarEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/LugarEvento"
                android:textColor="#454444"
                android:textSize="14sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Container Botones -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/containerBotones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/AddCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_personalizado"
                android:padding="10dp"
                android:text="@string/AddCalendar"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Compartir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="10dp"
                android:background="@drawable/btn_personalizado"
                android:backgroundTint="#292929"
                android:drawableEnd="@drawable/compartir_ico"
                android:drawablePadding="8dp"
                android:drawableTint="@color/white"
                android:padding="10dp"
                android:text="@string/compartir"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>